--- a/settings.json
+++ b/settings.json
@@ -10,17 +10,17 @@
   "GRADIENT_THEME": "retro",
   "knownURL": "https://cassidyredux.onrender.com",
   "noFB": false,
-  "PREFIX": "#",
-  "NICKNAME": "Cassidy Bot",
+  "PREFIX": "!",
+  "NICKNAME": "Eira [ ! ]",
   "CUSTOM_STYLE": {
     "enabled": false,
     "note": "When enabled, this will allow you to customize certain styles of bot responses. {word} represents non-emoji texts and {emojis} represents emojis. Change the TITLE_PATTERN to your likings.",
     "TITLE_PATTERN": "{emojis}【 {word} 】{emojis}"
   },
-  "LOGO": "",
-  "ADMINBOT": ["100075058221244", "YOUR_UID"],
+  "LOGO": "🪐",
+  "ADMINBOT": ["61568214359055", "61568214359055"],
   "EXTRAPREFIX": ["_"],
-  "MODERATORBOT": [],
+  "MODERATORBOT": [61568214359055],
   "exitOnError": false,
   "WEB_PASSWORD": "liaSS-web",
   "discordBotToken": "",
