--- a/settings.json
+++ b/settings.json
@@ -10,8 +10,8 @@
   "GRADIENT_THEME": "retro",
   "knownURL": "https://cassidyredux.onrender.com",
   "noFB": false,
-  "PREFIX": "!",
-  "NICKNAME": "Eira [ ! ]",
+  "PREFIX": "$",
+  "NICKNAME": "Eira Cassidy Bot",
   "CUSTOM_STYLE": {
     "enabled": false,
     "note": "When enabled, this will allow you to customize certain styles of bot responses. {word} represents non-emoji texts and {emojis} represents emojis. Change the TITLE_PATTERN to your likings.",
@@ -19,7 +19,7 @@
   },
   "LOGO": "🪐",
   "ADMINBOT": ["61568214359055", "61568214359055"],
-  "EXTRAPREFIX": ["_"],
+  "EXTRAPREFIX": ["&"],
   "MODERATORBOT": [61568214359055],
   "exitOnError": false,
   "WEB_PASSWORD": "liaSS-web",
