--- a/settings.json
+++ b/settings.json
@@ -11,7 +11,7 @@
   "knownURL": "https://cassidyredux.onrender.com",
   "noFB": false,
   "PREFIX": "$",
-  "NICKNAME": "Eira Cassidy Bot",
+  "NICKNAME": "Kysler Cassidy Bot",
   "CUSTOM_STYLE": {
     "enabled": false,
     "note": "When enabled, this will allow you to customize certain styles of bot responses. {word} represents non-emoji texts and {emojis} represents emojis. Change the TITLE_PATTERN to your likings.",
