--- a/settings.json
+++ b/settings.json
@@ -10,15 +10,15 @@
   "GRADIENT_THEME": "retro",
   "knownURL": "https://cassidyredux.onrender.com",
   "noFB": false,
-  "PREFIX": "#",
-  "NICKNAME": "Cassidy Bot",
+  "PREFIX": "$",
+  "NICKNAME": "Kysler Cassidy Bot",
   "CUSTOM_STYLE": {
     "enabled": false,
     "note": "When enabled, this will allow you to customize certain styles of bot responses. {word} represents non-emoji texts and {emojis} represents emojis. Change the TITLE_PATTERN to your likings.",
     "TITLE_PATTERN": "{emojis}【 {word} 】{emojis}"
   },
-  "LOGO": "",
-  "ADMINBOT": ["100075058221244", "YOUR_UID"],
+  "LOGO": "🪐",
+  "ADMINBOT": ["61568214359055", "YOUR_UID"],
   "EXTRAPREFIX": ["_"],
   "MODERATORBOT": [],
   "exitOnError": false,
